--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- TODO: Update icon --> <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#c43a31" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- TODO: Update logo file here & in manifest.json -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/apple-touch-icon.png" /> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
